--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -20,7 +20,7 @@ jobs:
           images: ghcr.io/lanjelin/openaudible-docker
           flavor: latest=true
           tags: |
-            type=ref,event=tag
+            type=semver,pattern={{version}}
           labels: |
             maintainer=Lanjelin
 
@@ -35,7 +35,7 @@ jobs:
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
